# ogx-distribution

./: .gitignore  .pre-commit-config.yaml  Containerfile  Containerfile.in  Dockerfile.konflux  README.md  history.json
tests/functional/: .env.example  Containerfile  README.md  pyproject.toml
tests/functional/bruno/: README.md  package-lock.json  package.json  pnpm-lock.yaml
tests/functional/bruno/environments/: ogx.bru
tests/functional/bruno/ogx-api/01-admin/: Get Version.bru  List Routes.bru
tests/functional/bruno/ogx-api/02-models/: Get Model.bru  List Models.bru
tests/functional/bruno/ogx-api/03-inference/: Create Chat Completion.bru  Create Embedding.bru  Create Text Completion.bru  List Chat Completions.bru
tests/functional/bruno/ogx-api/04-files/: Create File.bru  Get File.bru  List Files.bru
tests/functional/bruno/ogx-api/05-vector-stores/: Attach File to Vector Store.bru  Create Vector Store.bru  Delete Vector Store.bru  (+5 more)
tests/functional/bruno/ogx-crud/: bruno.json  collection.bru
tests/functional/bruno/spec/: openapi.json
tests/functional/config/: README.md  notebook_env.py  providers-matrix.yaml
tests/functional/docs/: providers-matrix.md
tests/functional/notebooks/: README.md  test_basic_inference.ipynb  test_file_processors.ipynb  test_mcp_tooling.ipynb  test_negative.ipynb  test_openai_rag.ipynb  test_openapi.ipynb  test_rag.ipynb  test_responses.ipynb  test_streaming_responses.ipynb
tests/functional/scripts/: helpers.py  run-tests-with-providers.sh  setup-server.sh  sync-client-version.sh
tests/functional/tests/: test_notebooks.py
(+82 files in other folders)
