[project]
name = "ogx-functional-tests"
version = "0.1.0"
description = "Functional tests for OGX (Bruno + notebooks)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ogx-client>=1.0.0",
    "openai>=2.24.0",
    "mcp>=1.0.0",
    "pytest>=9.0.2",
    "nbformat>=5.10.4",
    "nbconvert>=7.17.0",
    "pytest-xdist>=3.8.0",
    "pytest-cov>=7.1.0",
    "ipykernel>=7.2.0",
]

[tool.pytest.ini_options]
addopts = "--cov-report=term-missing"

[tool.ruff]
extend-exclude = ["bruno/"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402"]

[tool.coverage.run]
branch = true
source = ["ogx_functional_tests"]

[tool.coverage.report]
show_missing = true
